# pop_finder

./: .gitignore  .readthedocs.yml  CONTRIBUTING.rst  README.md  pop_find_class.py  pop_find_class1.py  pop_find_sk_gh.py  pyproject.toml  setup.py
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/source/: modules.rst  pop_finder.rst
hyper_tune_test_out/hyper_tune/: oracle.json
hyper_tune_test_out/hyper_tune/trial_0205a0cce957147d3e01b661f5346aad/: trial.json
pop_finder/: assign_plot.py  cli_classifier.py  cli_regressor.py  conf_matrix.py  contour_classifier.py  hp_tuning.py  locator_mod.py  pop_finder.py  read.py  structure_plot.py
pop_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pop_finder.py
tests/kfcv_test_output/: classification_report.csv  ensemble_classification_report.csv  ensemble_preds.csv  ensemble_test_results.csv  metrics.csv
tests/test_inputs/: X_test.npy  X_train.npy  kfcv1_params.json  onlyAtl_500.recode.vcf  onlyAtl_500.recode.vcf.locator.hdf5  onlyAtl_500_kfcv.recode.vcf  onlyAtl_truelocs.txt  onlyAtl_truelocs_3col.txt  onlyAtl_truelocs_NAs.txt  onlyAtl_truelocs_badsamps.txt  onlyAtl_truelocs_extracol.txt  test_out1_params.json  test_unknowns.csv  ukgen.npy  y_test.csv  y_train.csv
tests/test_inputs/ensemble_test/: metrics.csv  (+3 more)
(+130 files in other folders)
