[tool.poetry]
name = "pop_finder"
version = "0.1.0"
description = "\"Python package that uses neural networks for population assignment\""
authors = ["Katie Birchard <birchardkatie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
