[tool.poetry]
name = "pop_finder"
version = "0.1.0"
description = "\"Python package that uses neural networks for population assignment\""
authors = ["Katie Birchard <birchardkatie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1, <4.0"
numpy = "1.18.4"
pandas = "^1.2.3"
h5py = "2.10.0"
argparse = "^1.4.0"
sklearn = "^0.0"
tensorflow = "2.3.0"
keras-tuner = "1.0.2"
matplotlib = "3.3.2"
scikit-allel = "1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
